# whisperrnote_icp

./: Cargo.toml  README.md  dfx.json  env.sample
backend/src/users/: mod.rs
contracts/: Cargo.toml
contracts/src/: encrypted_notes_rust.did  lib.rs  tags.rs
frontend/: package-lock.json  package.json
integrations/: appwrite.d.ts
