[package]
name = "encrypted_notes_backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.3"
ic-stable-structures = "0.6.4"
hex = "0.4.3"
serde = "1.0.226"
